--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -11,45 +11,85 @@ Nue Blog
 
 
 <!-- FEATURED SECTION -->
-<div class="container my-5 feature-container flexed">
-    {% for post in posts  %}
-    {% if post.large_feature == True %}
-    <a href="{{post.get_absolute_url}}" class="main-feature-card bg-dark text-white">
-        <img class="card-img feature-card-img" src="{{ post.image.url }}" alt="{{ post.title }}">
-        <div class="card-img-overlay">
-            <h5 class="card-title featured-card-title m-0">{{post.title}}</h5>
-            <p class="card-text featured-card-text m-0">{{post.excerpt}}.</p>
-            <div class="showthis my-2">
-                By: {{post.author}}
-            </div>
+<div class="container">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <div class="carousel-indicators">
+            {% for post in posts  %}
+            {% if post.add_to_carousel == True %}
+            {% if forloop.first %}
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{ forloop.counter }}"
+                class="active" aria-current="true" aria-label="Slide {{ forloop.counter }}">
+            </button>
+            {% else %}
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="{{ forloop.counter }}"
+                aria-label="Slide {{ forloop.counter }}">
+            </button>
+            {% endif %}
+            {% endif %}
+            {% endfor %}
         </div>
-    </a>
-    {% endif %}
-    {% endfor %}
 
-    {% for post in posts  %}
-    {% if post.small_feature == True %}
-    <a href="{{post.get_absolute_url}}" class="main-feature-card-2 bg-dark text-white">
-        <img class="card-img feature-card-img" style="height: auto;" src="{{ post.image.url }}" alt="{{ post.title }}">
-        <div class="card-img-overlay">
-            <h5 class="card-title featured-card-title m-0">{{post.title}}</h5>
-            <p class="card-text featured-card-text m-0"><em>{{post.excerpt}}.</em></p>
-            <div class="showthis my-2">
-                By: {{post.author}}
-            </div>
+        <div class="carousel-inner">
+            {% for post in posts  %}
+            {% if post.add_to_carousel == True %}
+            {% if forloop.first %}
+            <a href="{{post.get_absolute_url}}" class="carousel-item active" data-bs-interval="10000">
+                <img src="{{ post.image.url }}" class="d-block w-100 carousel-image" alt="...">
+                <div class="carousel-caption-wrap">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{post.title}}</h5>
+                        <p>{{post.excerpt}}.</p>
+                        <small>By: {{post.author}}</small>
+                    </div>
+                </div>
+            </a>
+            {% else %}
+            <a href="{{post.get_absolute_url}}" class="carousel-item" data-bs-interval="10000">
+                <img src="{{ post.image.url }}" class="d-block w-100 carousel-image" alt="...">
+                <div class="carousel-caption-wrap">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h5>{{post.title}}</h5>
+                        <p>{{post.excerpt}}.</p>
+                        <small>By: {{post.author}}</small>
+                    </div>
+                </div>
+            </a>
+            {% endif %}
+            {% endif %}
+            {% endfor %}
+
         </div>
-    </a>
-    {% endif %}
-    {% endfor %}
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+            <span>°</span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+            <span>°</span>
+            <span class="visually-hidden">Next</span>
+        </button>
+    </div>
 </div>
+
+<!-- CATEGORIES -->
+
+
 
 <!-- POSTS -->
 <div class="album py-5 bg-light">
+    <div class="container mb-5 bg-light col-md-12 flexed category-bar">
+        {% for category in category_list  %}
+        <div>
+            {{category.name|title}}
+        </div>
+        <span style="color: #48AA8B; font-size: 35px">•</span>
+        {% endfor %}
+    </div>
     <div class="container">
         <div class="row">
             {% for post in posts %}
 
-            <div class="col-md-3 flexed">
+            <div class="col-md-3 flexed" data-aos="fade-in" data-aos-duration="500" data-aos-easing="ease-in-out"
+                data-aos-mirror="true" data-aos-once="true" data-aos-anchor-placement="top-center">
                 <a class="text-dark" href="{{post.get_absolute_url}}">
                     <div class="card mb-5">
                         <img class="card-img-top post-image" src="{{ post.image.url }}" alt="{{ post.title }}">
@@ -61,7 +101,7 @@ Nue Blog
                         <div class="d-flex py-1 justify-content-between align-items-right">
                             <small class="post-published-date">{{post.publish}}</small>
                             <small class="post-author">{{post.author}}</small>
- 
+
                         </div>
                     </div>
                 </a>
