--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -19,7 +19,7 @@ Welcome to Blog
           <div class="card mb-4 box-shadow">
             <img class="card-img-top" src="{{post.image.url}}" alt="{{ post.title }}">
             <div class="card-body">
-              <h2 style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
+              <h2 class="card-title" style="font-size:18px;font-weight:bold">{{post.title|truncatechars:50}}</h2>
               <p class="card-text">{{post.excerpt|truncatechars:50}}</p>
               <div class="d-flex justify-content-between align-items-center">
                 <small class="text-muted">9 mins</small>
