--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -87,7 +87,7 @@ Nue Blog
 
                         </div>
                         <div class="d-flex py-1 justify-content-between align-items-right">
-                            <small class="post-published-date">{{post.publish}}</small>
+                            <small class="post-published-date">{{post.published}}</small>
                             <small class="post-author">{{post.author}}</small>
 
                         </div>
