--- a/templates/accounts/favorites.html
+++ b/templates/accounts/favorites.html
@@ -47,7 +47,7 @@
 
                         </div>
                         <div class="d-flex py-1 justify-content-between align-items-right">
-                            <small class="text-muted post-published-date">{{post.publish}}</small>
+                            <small class="text-muted post-published-date">{{post.published}}</small>
                             <small class="text-muted post-author">{{post.author}}</small>
 
                         </div>
