--- a/templates/blog/search.html
+++ b/templates/blog/search.html
@@ -25,7 +25,7 @@
                                 <p class="card-text" style="height: 65px;">{{post.excerpt|truncatechars:50}}</p>
                             </div>
                             <div class="d-flex py-1 justify-content-between align-items-right">
-                                <small class="text-muted post-published-date">{{post.publish}}</small>
+                                <small class="text-muted post-published-date">{{post.published}}</small>
                                 <small class="text-muted post-author">{{post.author}}</small>
                             </div>
                         </div>
