--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -15,7 +15,7 @@ Nue Blog
 <div class="container">
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            {% for post in posts  %}
+            {% for post in posts|slice:":5"  %}
             {% if post.add_to_carousel == True %}
             {% if forloop.first %}
             <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
@@ -31,7 +31,7 @@ Nue Blog
         </div>
 
         <div class="carousel-inner">
-            {% for post in posts  %}
+            {% for post in posts|slice:":5"  %}
             {% if post.add_to_carousel == True %}
             <a href="{{post.get_absolute_url}}" class="carousel-item {% if forloop.counter == 1 %}active{% endif %}"
                 data-bs-interval="10000">
