--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -10,16 +10,12 @@
     }
 </style>
 
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom">
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 nav-wrap border-bottom">
     <h5 class="my-0 mr-md-auto font-weight-normal"><a class="text-dark" href="/">
-            <img class="img-fluid navbar-logo" src="{% static 'images/nueuibloglogo.png' %}">
+            <img class="img-fluid navbar-logo" src="{% static 'images/nueuiwhite.png' %}">
         </a>
     </h5>
-    <nav class="my-2 my-md-0 mr-md-3">
-        <a class="p-2 text-dark" href="/search">Search</a>
-        <a class="p-2 text-dark" href="#">About</a>
-        <a class="p-2 text-dark" href="#">Contact</a>
-    </nav>
+   
     {% if request.user.is_authenticated %}
     <img class="avatar" src="
     {% for data in avatar %}
@@ -48,8 +44,13 @@
     </ul>
     {% else %}
     <nav>
-        <a class="p-2 text-dark" href="{% url "accounts:register" %}">Register</a>
-        <a class="p-2 text-dark" href="{% url "login" %}">Login</a>
+        <a class="p-2 navlinks mr-2" href="{% url "accounts:register" %}">Register</a>
+        <a class="p-2 navlinks" href="{% url "login" %}">Login</a>
+    </nav>
+    <nav class="my-2 ml-2 my-md-0 mr-md-3">
+        <a class="p-2 navlinks" href="/search"><i class="fas fa-search mr-1"></i> Search</a>
+        <!-- <a class="p-2 text-dark" href="#">About</a> -->
+        <!-- <a class="p-2 text-dark" href="#">Contact</a> -->
     </nav>
     {% endif %}
 </div>
