removed heart likes

--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -11,7 +11,7 @@ Nue Blog
 
 
 <!-- FEATURED SECTION -- Jumbotron -->
-<div class="container">
+<div class="container" style="margin-top: 50px;">
     <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
             {% for ci in carousel_imgs|slice:":5"  %}
